0.4.0
 - feat: allow to renew and revoke API tokens (#12)
 - fix: selecting dcor-access token file in health-facility wizard
   section did not work.
0.3.0
 - BREAKING CHANGE: all methods and functions dealing with API calls
   now accept a CKANAPI instance instead of a server and an API key.
   This was necessary, because we have to support certificate pinning.
 - fix: actually use server certificate for "medical" user scenario
 - fix: support new CKAN API tokens
 - setup: bump dclab from 0.32.2 to 0.32.4
0.2.2
 - build: fix build macOS pipeline
0.2.1
 - build: fix build pipeline
0.2.0
 - feat: enable "clinics" in wizard and support encrypted access tokens
 - ci: overhauled build pipeline
 - enh: add APIAuthorizationError class
0.1.1
 - setup: bump dclab from 0.28.0 to 0.32.2 (OOM issues during compression)
 - setup: pin dclab (for triaging)
 - build: move build pipeline from travisCI to GitHub Actions
0.1.0
 - feat: implement persistent upload resource schema presets (#9)
 - fix: do not allow user to proceed with upload unless 'authors'
   is specified (to avoid cryptic error message)
 - fix: minor issue of visualizing whether user changed
   supplementary resource information
 - enh: enable DCOR usage (anonymous and registered users)
 - enh: make sure the user really wants to upload datasets without
   editing any metadata (#10)
 - enh: improve upload dialog understandability
 - ref: migrate preferences to QSettings
 - ref: refactor upload dialog to a real dialog
0.0.9
 - enh: send DCOR-Aid user-agent string
0.0.8
 - fix: force restart of DCOR-Aid upon wizard end
 - fix: improve handling of cache and config directories
0.0.7
 - fix: allow resuming when upload fails (#3)
 - fix: start even if DCOR is down
 - fix: do not display mean upload rate during upload
 - fix: require restart when server is changed
 - enh: ask user to create a Circle when the user is not member of any 
 - enh: add basic wizard functionalities