@@ -38,8 +38,8 @@ build: off
 
 test_script:
   - python -c "import dcoraid; print(dcoraid.__version__)"
-  - pip install coverage
-  - pip install codecov
+  - pip install coverage codecov
+  - pip install pytest pytest-qt
   - coverage run --source=dcoraid ./setup.py test
   - coverage report -m
   # Allow codecov to fail
