@@ -37,7 +37,7 @@ jobs:
       run: |
         # prerequisites
         python -m pip install --upgrade pip wheel
-        python -m pip install codecov coverage flake8 pytest
+        python -m pip install codecov coverage flake8 pytest pytest-qt
         # install dependencies
         pip install -e .
         # show installed packages
